4year/Compilers/SintacticAnalysis/src/src/LCPLTreeBuilderParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 src/LCPLTreeBuilder.g 2013-11-19 14:14:39

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class LCPLTreeBuilderParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "NEW", "ARROW", "CLASS", "INHERITS", "END", "VOID", "SELF", "VAR", "LOCAL", "LOOP", "COLON", "ADDITION", "MINUS", "MULTIPLY", "DIVIDE", "LESSTHAN", "LESSTHANEQUAL", "EQUAL", "NOT", "CLASSDEFS", "FEATURES", "DECLARATIONS", "DECLARATION", "METHOD", "METHODEXPRESSION", "METHODNAME", "FORMALPARAM", "LOCALDEFS", "LOCALDEF", "DISPATCH", "SYMBOL", "ATOM", "STATEMENT", "ID", "INT", "ASSIGNMENT", "NAME", "STRING_CONST", "IDENTIFIER", "PARENT", "INTEGER", "STRINGCONST", "VOIDKWRD", "SELFKWRD", "SUBSTR", "INDEX", "STATICDISPATCH", "PARAMCALLS", "CAST", "WHILEBODY", "IF", "THEN", "ELSE", "WHILE", "WHILEST", "CONDITION", "IFBODY", "ELSEBODY", "IFST", "STRING", "LINE_COMMENT", "WS", "';'", "','", "'['", "'.'", "']'", "'('", "')'", "'{'", "'}'"
    };
    public static final int IFBODY=61;
    public static final int CAST=53;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int CLASS=7;
    public static final int T__67=67;
    public static final int ADDITION=16;
    public static final int WHILE=58;
    public static final int FORMALPARAM=31;
    public static final int DISPATCH=34;
    public static final int NEW=5;
    public static final int CONDITION=60;
    public static final int NOT=23;
    public static final int METHODEXPRESSION=29;
    public static final int ATOM=36;
    public static final int ID=38;
    public static final int EOF=-1;
    public static final int DECLARATION=27;
    public static final int STATEMENT=37;
    public static final int IF=55;
    public static final int INDEX=50;
    public static final int ELSEBODY=62;
    public static final int PARENT=44;
    public static final int STATICDISPATCH=51;
    public static final int NAME=41;
    public static final int THEN=56;
    public static final int INHERITS=8;
    public static final int MULTIPLY=18;
    public static final int SUBSTR=49;
    public static final int IDENTIFIER=43;
    public static final int STRING_CONST=42;
    public static final int LOOP=14;
    public static final int EQUAL=22;
    public static final int STRINGCONST=46;
    public static final int VAR=12;
    public static final int VOID=10;
    public static final int LESSTHANEQUAL=21;
    public static final int PARAMCALLS=52;
    public static final int IFST=63;
    public static final int DIVIDE=19;
    public static final int INTEGER=45;
    public static final int LESSTHAN=20;
    public static final int WHILEBODY=54;
    public static final int SYMBOL=35;
    public static final int LINE_COMMENT=65;
    public static final int FEATURES=25;
    public static final int ELSE=57;
    public static final int VOIDKWRD=47;
    public static final int DECLARATIONS=26;
    public static final int INT=39;
    public static final int CLASSDEFS=24;
    public static final int SELFKWRD=48;
    public static final int LOCAL=13;
    public static final int MINUS=17;
    public static final int COLON=15;
    public static final int LOCALDEF=33;
    public static final int WS=66;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int WHILEST=59;
    public static final int T__70=70;
    public static final int LOCALDEFS=32;
    public static final int ARROW=6;
    public static final int PROGRAM=4;
    public static final int ASSIGNMENT=40;
    public static final int METHODNAME=30;
    public static final int END=9;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int SELF=11;
    public static final int T__73=73;
    public static final int METHOD=28;
    public static final int STRING=64;

    // delegates
    // delegators


        public LCPLTreeBuilderParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LCPLTreeBuilderParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[40+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LCPLTreeBuilderParser.tokenNames; }
    public String getGrammarFileName() { return "src/LCPLTreeBuilder.g"; }



        //functions that validate if a token is a 
        //data type or a variable name
        boolean isTypeID(String s)
        {

            return Character.isUpperCase(s.charAt(0));

        }

        boolean isVarNameID(String s)

        {

             return !(Character.isUpperCase(s.charAt(0)));

        } 




    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // src/LCPLTreeBuilder.g:112:1: program : ( classdef )* -> ^( PROGRAM ^( CLASSDEFS ( classdef )* ) ) ;
    public final LCPLTreeBuilderParser.program_return program() throws RecognitionException {
        LCPLTreeBuilderParser.program_return retval = new LCPLTreeBuilderParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        CommonTree root_0 = null;

        LCPLTreeBuilderParser.classdef_return classdef1 = null;


        RewriteRuleSubtreeStream stream_classdef=new RewriteRuleSubtreeStream(adaptor,"rule classdef");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // src/LCPLTreeBuilder.g:112:9: ( ( classdef )* -> ^( PROGRAM ^( CLASSDEFS ( classdef )* ) ) )
            // src/LCPLTreeBuilder.g:112:13: ( classdef )*
            {
            // src/LCPLTreeBuilder.g:112:13: ( classdef )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==CLASS) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/LCPLTreeBuilder.g:112:14: classdef
            	    {
            	    pushFollow(FOLLOW_classdef_in_program589);
            	    classdef1=classdef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classdef.add(classdef1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: classdef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 112:25: -> ^( PROGRAM ^( CLASSDEFS ( classdef )* ) )
            {
                // src/LCPLTreeBuilder.g:112:28: ^( PROGRAM ^( CLASSDEFS ( classdef )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                // src/LCPLTreeBuilder.g:112:38: ^( CLASSDEFS ( classdef )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASSDEFS, "CLASSDEFS"), root_2);

                // src/LCPLTreeBuilder.g:112:50: ( classdef )*
                while ( stream_classdef.hasNext() ) {
                    adaptor.addChild(root_2, stream_classdef.nextTree());

                }
                stream_classdef.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class classdef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classdef"
    // src/LCPLTreeBuilder.g:117:1: classdef : CLASS name= ID ( INHERITS parent= ID )? ( feature )* fin1= END ';' -> ^( CLASS ^( NAME $name) ^( PARENT ( $parent)? ) ^( FEATURES ( feature )* ) ) ;
    public final LCPLTreeBuilderParser.classdef_return classdef() throws RecognitionException {
        LCPLTreeBuilderParser.classdef_return retval = new LCPLTreeBuilderParser.classdef_return();
        retval.start = input.LT(1);
        int classdef_StartIndex = input.index();
        CommonTree root_0 = null;

        Token name=null;
        Token parent=null;
        Token fin1=null;
        Token CLASS2=null;
        Token INHERITS3=null;
        Token char_literal5=null;
        LCPLTreeBuilderParser.feature_return feature4 = null;


        CommonTree name_tree=null;
        CommonTree parent_tree=null;
        CommonTree fin1_tree=null;
        CommonTree CLASS2_tree=null;
        CommonTree INHERITS3_tree=null;
        CommonTree char_literal5_tree=null;
        RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
        RewriteRuleTokenStream stream_CLASS=new RewriteRuleTokenStream(adaptor,"token CLASS");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_INHERITS=new RewriteRuleTokenStream(adaptor,"token INHERITS");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleSubtreeStream stream_feature=new RewriteRuleSubtreeStream(adaptor,"rule feature");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // src/LCPLTreeBuilder.g:117:10: ( CLASS name= ID ( INHERITS parent= ID )? ( feature )* fin1= END ';' -> ^( CLASS ^( NAME $name) ^( PARENT ( $parent)? ) ^( FEATURES ( feature )* ) ) )
            // src/LCPLTreeBuilder.g:119:8: CLASS name= ID ( INHERITS parent= ID )? ( feature )* fin1= END ';'
            {
            CLASS2=(Token)match(input,CLASS,FOLLOW_CLASS_in_classdef633); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CLASS.add(CLASS2);

            name=(Token)match(input,ID,FOLLOW_ID_in_classdef637); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(name);

            // src/LCPLTreeBuilder.g:119:22: ( INHERITS parent= ID )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==INHERITS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // src/LCPLTreeBuilder.g:119:23: INHERITS parent= ID
                    {
                    INHERITS3=(Token)match(input,INHERITS,FOLLOW_INHERITS_in_classdef640); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_INHERITS.add(INHERITS3);

                    parent=(Token)match(input,ID,FOLLOW_ID_in_classdef644); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(parent);


                    }
                    break;

            }

            // src/LCPLTreeBuilder.g:119:46: ( feature )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==VAR||LA3_0==ID) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/LCPLTreeBuilder.g:119:47: feature
            	    {
            	    pushFollow(FOLLOW_feature_in_classdef651);
            	    feature4=feature();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_feature.add(feature4.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            fin1=(Token)match(input,END,FOLLOW_END_in_classdef657); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_END.add(fin1);

            char_literal5=(Token)match(input,67,FOLLOW_67_in_classdef659); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_67.add(char_literal5);



            // AST REWRITE
            // elements: parent, feature, name, CLASS
            // token labels: name, parent
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
            RewriteRuleTokenStream stream_parent=new RewriteRuleTokenStream(adaptor,"token parent",parent);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 119:69: -> ^( CLASS ^( NAME $name) ^( PARENT ( $parent)? ) ^( FEATURES ( feature )* ) )
            {
                // src/LCPLTreeBuilder.g:120:9: ^( CLASS ^( NAME $name) ^( PARENT ( $parent)? ) ^( FEATURES ( feature )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_CLASS.nextNode(), root_1);

                // src/LCPLTreeBuilder.g:120:17: ^( NAME $name)
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(NAME, "NAME"), root_2);

                adaptor.addChild(root_2, stream_name.nextNode());

                adaptor.addChild(root_1, root_2);
                }
                // src/LCPLTreeBuilder.g:120:31: ^( PARENT ( $parent)? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARENT, "PARENT"), root_2);

                // src/LCPLTreeBuilder.g:120:40: ( $parent)?
                if ( stream_parent.hasNext() ) {
                    adaptor.addChild(root_2, stream_parent.nextNode());

                }
                stream_parent.reset();

                adaptor.addChild(root_1, root_2);
                }
                // src/LCPLTreeBuilder.g:120:52: ^( FEATURES ( feature )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FEATURES, "FEATURES"), root_2);

                // src/LCPLTreeBuilder.g:120:63: ( feature )*
                while ( stream_feature.hasNext() ) {
                    adaptor.addChild(root_2, stream_feature.nextTree());

                }
                stream_feature.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, classdef_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "classdef"

    public static class feature_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "feature"
    // src/LCPLTreeBuilder.g:125:1: feature : ( attributeblock | method );
    public final LCPLTreeBuilderParser.feature_return feature() throws RecognitionException {
        LCPLTreeBuilderParser.feature_return retval = new LCPLTreeBuilderParser.feature_return();
        retval.start = input.LT(1);
        int feature_StartIndex = input.index();
        CommonTree root_0 = null;

        LCPLTreeBuilderParser.attributeblock_return attributeblock6 = null;

        LCPLTreeBuilderParser.method_return method7 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // src/LCPLTreeBuilder.g:125:8: ( attributeblock | method )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==VAR) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/LCPLTreeBuilder.g:126:5: attributeblock
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_attributeblock_in_feature720);
                    attributeblock6=attributeblock();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, attributeblock6.getTree());

                    }
                    break;
                case 2 :
                    // src/LCPLTreeBuilder.g:127:6: method
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_method_in_feature727);
                    method7=method();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, method7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, feature_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "feature"

    public static class attributeblock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeblock"
    // src/LCPLTreeBuilder.g:131:1: attributeblock : start= VAR ( declaration )* END ';' -> ^( DECLARATIONS ( declaration )* ) ;
    public final LCPLTreeBuilderParser.attributeblock_return attributeblock() throws RecognitionException {
        LCPLTreeBuilderParser.attributeblock_return retval = new LCPLTreeBuilderParser.attributeblock_return();
        retval.start = input.LT(1);
        int attributeblock_StartIndex = input.index();
        CommonTree root_0 = null;

        Token start=null;
        Token END9=null;
        Token char_literal10=null;
        LCPLTreeBuilderParser.declaration_return declaration8 = null;


        CommonTree start_tree=null;
        CommonTree END9_tree=null;
        CommonTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // src/LCPLTreeBuilder.g:131:15: (start= VAR ( declaration )* END ';' -> ^( DECLARATIONS ( declaration )* ) )
            // src/LCPLTreeBuilder.g:132:5: start= VAR ( declaration )* END ';'
            {
            start=(Token)match(input,VAR,FOLLOW_VAR_in_attributeblock749); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_VAR.add(start);

            // src/LCPLTreeBuilder.g:132:15: ( declaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/LCPLTreeBuilder.g:132:16: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_attributeblock752);
            	    declaration8=declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_declaration.add(declaration8.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            END9=(Token)match(input,END,FOLLOW_END_in_attributeblock756); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_END.add(END9);

            char_literal10=(Token)match(input,67,FOLLOW_67_in_attributeblock758); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_67.add(char_literal10);



            // AST REWRITE
            // elements: declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 133:5: -> ^( DECLARATIONS ( declaration )* )
            {
                // src/LCPLTreeBuilder.g:133:8: ^( DECLARATIONS ( declaration )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_1);

                // src/LCPLTreeBuilder.g:133:24: ( declaration )*
                while ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, attributeblock_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "attributeblock"

    public static class localdefblock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "localdefblock"
    // src/LCPLTreeBuilder.g:137:1: localdefblock : start= LOCAL ( localdef )* END -> ^( LOCALDEFS[$start] ( localdef )* ) ;
    public final LCPLTreeBuilderParser.localdefblock_return localdefblock() throws RecognitionException {
        LCPLTreeBuilderParser.localdefblock_return retval = new LCPLTreeBuilderParser.localdefblock_return();
        retval.start = input.LT(1);
        int localdefblock_StartIndex = input.index();
        CommonTree root_0 = null;

        Token start=null;
        Token END12=null;
        LCPLTreeBuilderParser.localdef_return localdef11 = null;

